umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_rdkit_CrBz.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 7
bond_count: 12
sum_formula: C6Cr
graph6: FhENw
