umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_rdkit_Issue239.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 22
bond_count: 25
sum_formula: C16N6
graph6: UxCGGG@?G@?P?@??_?G?@??O??G??g??C??@??CG
