umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_rdkit_Issue2705543.1h.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 27
bond_count: 27
sum_formula: C7H14O6
graph6: ZhCKA?_CCO?_?__?G?@??C??G??G??G??@???G???_???_???_???_???O??
